# dnd-llm

FYP-demo-BackEnd/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
FYP-demo-BackEnd/app/: app_factory.py  schemas.py
FYP-demo-BackEnd/app/api/: __init__.py  characters.py  chat.py  sessions.py  settings.py  stories.py
FYP-demo-BackEnd/app/db/: __init__.py  crud.py  database.py  init_db.py  models.py
FYP-demo-BackEnd/app/services/: langchain_service.py  message_builder.py  options_service.py  outline_planner_agent.py  revision_agent.py  settings_service.py  synopsis_agent.py
FYP-demo-BackEnd/app/services/langchain_tools/: __init__.py  tool_base.py  tool_executor.py  tool_registry.py  tools.py
FYP-demo-BackEnd/app/services/rag/: rag.py  rag_config.py  retriever.py
FYP-demo-BackEnd/app/utils/: __init__.py  character_utils.py  logger.py  read_data.py
FYP-demo-BackEnd/assets/: DM.md  dnd_data.json  options_prompt.json  outline_planner_agent_prompt.json  revision_agent_prompt.json  synopsis_agent_prompt.json  system_rule.json
FYP-demo-BackEnd/documents/: RAG.md  api.md  db.md  function_call.md  plot_synopsis_system.md
FYP-demo-FrontEnd/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
FYP-demo-FrontEnd/app/: globals.css  layout.tsx  page.tsx
FYP-demo-FrontEnd/app/dice-demo/: page.tsx
FYP-demo-FrontEnd/components/: begin-screen.tsx  nav-actions.tsx  theme-provider.tsx
FYP-demo-FrontEnd/components/chat/: archive-selector.tsx  (+14 more)
FYP-demo-FrontEnd/lib/: api.ts  story.ts
(+3 files in other folders)
