[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "lmnr[all]>=0.7.1",
    "openai>=1.98.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "marker-pdf>=1.10.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
